<resources>
    <string name="app_name">Maisonier</string>
    <string name="load">Chargement...</string>

    <string name="title_activity_login">Autentification</string>
    <string name="color">#0082C3</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Connexion</string>


    <string name="section_format">Page %1$d</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_modele_presentation">ModelePresentation</string>
    <string name="title_activity_profil__user">Profil_User</string>
    <string name="action_search">rechercher</string>
    <string name="dialog_message_group_item_pinned">good</string>
    <string name="dialog_message_item_pinned">bien</string>
    <string name="accueilmaisonier">Accueil Maisonier</string>
    <string name="gererlogement">Gérer les logements</string>
    <string name="typelogement">Type de logement</string>
    <string name="batiment">Batiments</string>
    <string name="Logements">Logements</string>
    <string name="Caracteristiques">Caracteristiques</string>
    <string name="disponibles">Logements disponibles</string>
    <string name="Cite">Cite</string>
    <string name="GererdesLoyers">Gérer des Loyers</string>
    <string name="Chargement">Chargement</string>
    <string name="patienter">Veillez patienter</string>
    <string name="typedecharge">Types de charges</string>
    <string name="Logement">Logement</string>
    <string name="typepenalite">Type de penalite</string>
    <string name="article">Articles</string>
    <string name="date_picker_title">date</string>
    <string name="ajouterCite">Ajouter un cite</string>
    <string name="modifierCite">Modifier un cite</string>
    <string name="Bailleur">Bailleur</string>
    <string name="Occupations">Occupations</string>
    <string name="Loyers">Loyers</string>
    <string name="Caution">Caution</string>
    <string name="Correspondance">Correspondance</string>
    <string name="Depenses">Depenses</string>
    <string name="Parametres">Parametres</string>
    <string name="Année">Année</string>
    <string name="Mois">Mois</string>
    <string name="Historiquedeparametrage">Historique de parametrage</string>
    <string name="Etats">Etats</string>
    <string name="Gérerlecable">Gérer le cable</string>
    <string name="Indexenéléctricité">Index en éléctricité</string>
    <string name="Indexeneau">Index en eau</string>
    <string name="Consommationenélectricité">Consommation en électricité</string>
    <string name="Consommationeneau">Consommation en eau</string>
    <string name="Gestiondesindex">Gestion des index</string>
    <string name="Charges">Charges</string>
    <string name="Pénalités">Pénalités</string>
    <string name="Gérerlespénalités">Gérer les pénalités</string>
    <string name="Transfertintercompte">Transfert inter-compte</string>
    <string name="ChargerDépot">Charger Dépot</string>
    <string name="Dépot">Dépot</string>
    <string name="Compte">Compte</string>
    <string name="Typedecompte">Type de compte</string>
    <string name="Gérerlescomptes">Gérer les comptes</string>
    <string name="ChargerRibriqueduncontrat">Charger Ribrique d\'un contrat</string>
    <string name="Rubrique">Rubrique</string>
    <string name="Rubriquedecontrat">Rubrique de contrat</string>
    <string name="Contratdebail">Contrat de bail</string>
    <string name="Gérerlescontrats">Gérer les contrats</string>
    <string name="Etatdesoccupations">Etat des occupations</string>
    <string name="Dossierdunhabitant">Dossier d\'un habitant</string>
    <string name="Listedeshablitants">Liste des hablitants</string>
    <string name="Enregistrement">Enregistrement</string>
    <string name="Gérerleshabitants">Gérer les habitants</string>
    <string name="habitant">Habitant</string>
    <string name="ajouterLoyer">Ajouter un loyer</string>
    <string name="ajouterContrat">Ajouter un contrat de bail</string>
    <string name="TypedeCaution">Type de caution</string>
    <string name="detail">Detail</string>
    <string name="penalite">Pénalité</string>
    <string name="parametrage">Paramétrage</string>
    <string name="photo">Photo</string>
    <string name="menu_share">partager</string>


</resources>
