<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/habitant"
                            android:layout_width="match_parent"
                            android:layout_height="319dp" />

                        <HorizontalScrollView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">

                                        <Button
                                            android:id="@+id/loyer"
                                            android:layout_width="180dp"
                                            android:layout_height="wrap_content"
                                            android:text="Loyer" />

                                        <Button
                                            android:id="@+id/compte"
                                            android:layout_width="179dp"
                                            android:layout_height="wrap_content"
                                            android:text="Comptes" />

                                        <Button
                                            android:id="@+id/depot"
                                            android:layout_width="179dp"
                                            android:layout_height="wrap_content"
                                            android:text="@string/Dépot" />

                                        <Button
                                            android:id="@+id/cable"
                                            android:layout_width="179dp"
                                            android:layout_height="wrap_content"
                                            android:text="Cable" />

                                        <Button
                                            android:id="@+id/prixUElect"
                                            android:layout_width="179dp"
                                            android:layout_height="wrap_content"
                                            android:text="@string/Consommationenélectricité" />

                                        <Button
                                            android:id="@+id/prixUEau"
                                            android:layout_width="179dp"
                                            android:layout_height="wrap_content"
                                            android:text="@string/Consommationeneau" />

                                        <Button
                                            android:id="@+id/facture"
                                            android:layout_width="179dp"
                                            android:layout_height="wrap_content"
                                            android:text="Facture client" />

                                        <Button
                                            android:id="@+id/caution"
                                            android:layout_width="179dp"
                                            android:layout_height="wrap_content"
                                            android:text="@string/Caution" />

                                        <Button
                                            android:id="@+id/Occupation"
                                            android:layout_width="179dp"
                                            android:layout_height="wrap_content"
                                            android:text="@string/Occupations" />

                                        <Button
                                            android:id="@+id/charge"
                                            android:layout_width="179dp"
                                            android:layout_height="wrap_content"
                                            android:text="@string/Charges" />

                                </LinearLayout>
                        </HorizontalScrollView>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/dossier"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                </LinearLayout>
        </ScrollView>


</LinearLayout>